--- a/base.css
+++ b/base.css
@@ -11,7 +11,7 @@ body {
     width: 1200px;
     display: flex;
     margin: 0 auto;
-    background-color: aquamarine;
+    background-color: aqua;
 }
 .main {
     display: flex;
@@ -24,7 +24,7 @@ body {
     padding: 10px 20px 0px;
 }
 .header {
-    background-color: rgb(5, 108, 108);
+    background-color: aqua;
     min-height: 150px;
 }
 .content {
@@ -33,6 +33,6 @@ body {
     padding: 20px;
 }
 .footer {
-    background-color: rgb(99, 56, 240);
+    background-color: aqua;
     min-height: 150px;
 }
